# vexirio.xyz

./: LICENSE  README.md
sysmonitor/: Cargo.toml
sysmonitor/src/: main.rs
website_template/: index.html  script.js  system.html
website_template/css/: style.css
