[package]
name = "system_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
sysinfo = "0.35"
procfs = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
